syntax = "proto3";

package api;

import "google/protobuf/empty.proto";

service UserService {
  rpc CreateUsers(CreateUsersRequest) returns (CreateUsersResponse) {};
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {};
  rpc GetUser(GetUserRequest) returns (User) {};
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {};
}

enum Language {
  ENGLISH  = 0;
  JAPANESE = 1;
}

message User {
  string name       = 1;
  string first_name = 2;
  string last_name  = 3;
  Language language = 4;
}

message CreateUsersRequest {
  message TempUser {
    string first_name = 1;
    string last_name  = 2;
    Language language = 3;
  }
  repeated TempUser users = 1;
}

message CreateUsersResponse {
  repeated User users = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}

message GetUserRequest {
  string name = 1;
}

message DeleteUserRequest {
  string name = 1;
}

service GreeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {};
  rpc SayHelloClientStream(stream SayHelloRequest) returns (SayHelloResponse) {};
  rpc SayHelloServerStream(SayHelloRequest) returns (stream SayHelloResponse) {};
  rpc SayHelloBidiStream(stream SayHelloRequest) returns (stream SayHelloResponse) {};
}

message SayHelloRequest {
  string greeter_name = 1;
}

message SayHelloResponse {
  string message = 1;
}
